# LAAF

./: .gitignore  CMakeLists.txt  Changes.txt  README.md
cmake/linux/: CMakeLists.txt  laaf.xml  lmms.desktop
cmake/modules/: DetectMachine.cmake
cmake/nsis/: CMakeLists.txt
data/presets/: CMakeLists.txt
data/samples/: CMakeLists.txt
src/core/: ConfigManager.cpp  SampleClip.cpp
src/gui/: MainWindow.cpp
src/gui/modals/: about_dialog.ui
